--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
                 android:text="Home" />
 
             <TextView
+                android:id="@+id/home_team_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -36,12 +37,13 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="addGoalHomeTeam"
                     android:text="+" />
 
                 <Button
-                    android:id="@+id/button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="subtractGoalHomeTeam"
                     android:text="-" />
 
             </LinearLayout>
@@ -85,6 +87,7 @@
                 android:text="Away" />
 
             <TextView
+                android:id="@+id/away_team_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -98,12 +101,14 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="addGoalAwayTeam"
                     android:text="+" />
 
                 <Button
                     android:id="@+id/button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="subtractGoalAwayTeam"
                     android:text="-" />
 
             </LinearLayout>
