--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="Period"/>
+                android:text="Period" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -118,7 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="1"/>
+                android:text="1" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -148,6 +148,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:onClick="resetGame"
         android:text="Reset" />
 
 </RelativeLayout>
