--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#29b6f6</color>
+    <color name="colorPrimaryDark">#039be5</color>
+    <color name="colorAccent">#009688</color>
+    <!-- Custom Colors -->
+    <color name="customRed">#ef5350</color>
 </resources>
