--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,95 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+    <!-- Team Home Header -->
+    <style name="teamHomeStyle">
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+    <!-- Team Away Header -->
+    <style name="teamAwayStyle">
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+    <!-- Score Home -->
+    <style name="scoreHomeStyle">
+        <item name="android:background">#039be5</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">112sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+    <!-- Score Away -->
+    <style name="scoreAwayStyle">
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">112sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+    <!-- Period Header-->
+    <style name="periodHeaderStyle">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:textSize">34sp</item>
+    </style>
+    <!-- Current Period -->
+    <style name="currentPeriodStyle">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:textSize">34sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <!-- Goal Home Buttons -->
+    <style name="goalHomeButtonStyle">
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+    <!-- Goal Away Buttons -->
+    <style name="goalAwayButtonStyle">
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+    <!-- Period Buttons -->
+    <style name="periodButtonStyle">
+        <item name="android:layout_marginTop">14dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">#ffffff</item>
+    </style>
+    <!-- Reset Button -->
+    <style name="resetButtonStyle">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:background">@color/customRed</item>
+        <item name="android:layout_marginLeft">36dp</item>
+        <item name="android:layout_marginRight">36dp</item>
     </style>
 
 </resources>
