Move colors and styles in respective xmls

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#039be5</color>
     <color name="colorAccent">#009688</color>
     <!-- Custom Colors -->
-    <color name="customRed">#ef5350</color>
+    <color name="colorRed">#ef5350</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
