--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:contentDescription="@null"
             android:scaleType="centerCrop"
             android:src="@drawable/bg" />
     </FrameLayout>
@@ -21,7 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="36dp"
-        android:background="#ffffff"
+        android:background="@color/colorWhite"
+        android:baselineAligned="false"
         android:orientation="horizontal">
 
         <LinearLayout
