--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:background">@color/colorPrimaryDark</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textAllCaps">true</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:padding">20dp</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
@@ -21,14 +21,14 @@
         <item name="android:background">@color/colorAccent</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textAllCaps">true</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:padding">20dp</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
     <!-- Score Home -->
     <style name="scoreHomeStyle">
         <item name="android:background">#039be5</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">112sp</item>
         <item name="android:fontFamily">sans-serif-black</item>
         <item name="android:gravity">center_horizontal</item>
@@ -36,7 +36,7 @@
     <!-- Score Away -->
     <style name="scoreAwayStyle">
         <item name="android:background">@color/colorAccent</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">112sp</item>
         <item name="android:fontFamily">sans-serif-black</item>
         <item name="android:gravity">center_horizontal</item>
@@ -57,7 +57,7 @@
     <!-- Goal Home Buttons -->
     <style name="goalHomeButtonStyle">
         <item name="android:background">@color/colorPrimaryDark</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:layout_margin">0dp</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -67,7 +67,7 @@
     <!-- Goal Away Buttons -->
     <style name="goalAwayButtonStyle">
         <item name="android:background">@color/colorAccent</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:layout_margin">0dp</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -82,12 +82,12 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">#ffffff</item>
+        <item name="android:background">@color/colorWhite</item>
     </style>
     <!-- Reset Button -->
     <style name="resetButtonStyle">
-        <item name="android:textColor">#ffffff</item>
-        <item name="android:background">@color/customRed</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:background">@color/colorRed</item>
         <item name="android:layout_marginLeft">36dp</item>
         <item name="android:layout_marginRight">36dp</item>
     </style>
